--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="tab_detail_desc">followers-following list tab</string>
     <string name="add_favorite">Add to Favorite</string>
     <string name="favorite">Favorites</string>
+    <string name="fav_user_activity_title">Favorite Users</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="settings">Settings</string>
+    <string name="self_name">Ricky Fadel M</string>
 </resources>
